<resources>
    <string name="app_name">App Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">*********</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Create an account</string>

    <string-array name="countries">

        <item>Afganishtan</item>
        <item>Algeria</item>
        <item>Africa</item>
        <item>Australia</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Canada</item>
        <item>China</item>
        <item>Chile</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>England</item>
        <item>Finland</item>
        <item>Nepal</item>
        <item>Netherland</item>
        <item>Norway</item>

    </string-array>
    <string name="title_activity_buy_more">BuyMoreActivity</string>
    <string name="title_activity_item_view">ItemViewActivity</string>
</resources>
