<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:padding="10dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="#E20909"
            android:paddingLeft="10dp"

            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"


            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="#00BCD4"/>


    </LinearLayout>

</LinearLayout>